add file select

--- a/filepicker/src/main/res/values/strings.xml
+++ b/filepicker/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
    <string name="last_edit">Last edited: </string>
    <string name="error_dir_access">Directory cannot be accessed</string>
    <string name="label_parent_dir" translatable="false">...</string>
+   <string name="file_name" translatable="false">File Name</string>
 </resources>
