--- a/filepicker/src/main/res/values-zh/strings.xml
+++ b/filepicker/src/main/res/values-zh/strings.xml
@@ -4,5 +4,6 @@
     <string name="choose_button_label">选择</string>
     <string name="label_parent_directory">上层文件夹</string>
     <string name="last_edit">最后修改：</string>
+    <string name="file_name" translatable="false">输入文件名称</string>
     <string name="error_dir_access">Directory cannot be accessed</string>
 </resources>
