--- a/OTALibrary/src/main/res/values-zh/strings.xml
+++ b/OTALibrary/src/main/res/values-zh/strings.xml
@@ -12,4 +12,6 @@
     <string name="app_update_dialog_new">发现新版本%s可以下载啦！</string>
     <string name="app_update_dialog_new_size">新版本大小：%s</string>
     <string name="app_update_update">升级</string>
+    <string name="app_update_download">正在下载： </string>
+    <string name="install_now">正在安装，请稍后！</string>
 </resources>
