--- a/OTALibrary/src/main/res/values/strings.xml
+++ b/OTALibrary/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="app_update_dialog_new">The new version %s can be downloaded!</string>
     <string name="app_update_dialog_new_size">New version size：%s</string>
     <string name="app_update_update">Update</string>
+    <string name="app_update_download">Downloading: </string>
+    <string name="install_now">Installing, please wait!</string>
 </resources>
