增加网络异常检测机制

--- a/OTALibrary/src/main/res/values-zh/strings.xml
+++ b/OTALibrary/src/main/res/values-zh/strings.xml
@@ -14,4 +14,6 @@
     <string name="app_update_update">升级</string>
     <string name="app_update_download">正在下载： </string>
     <string name="install_now">正在安装，请稍后！</string>
+    <string name="try_again">再试一次</string>
+    <string name="network_disable">网络波动异常，请确认网络连接稳定！</string>
 </resources>
