--- a/OTALibrary/src/main/res/values/strings.xml
+++ b/OTALibrary/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="app_update_update">Update</string>
     <string name="app_update_download">Downloading: </string>
     <string name="install_now">Installing, please wait!</string>
+    <string name="try_again">Try again</string>
+    <string name="network_disable">The network fluctuation is abnormal. Please confirm that the network connection is stable!</string>
 </resources>
