--- a/OTALibrary/src/main/res/values-zh/strings.xml
+++ b/OTALibrary/src/main/res/values-zh/strings.xml
@@ -4,16 +4,17 @@
     <string name="app_update_start_download">开始下载</string>
     <string name="app_update_start_download_hint">可稍后查看下载进度</string>
     <string name="app_update_start_downloading">正在下载新版本</string>
-    <string name="app_update_download_completed">下载完成</string>
-    <string name="app_update_click_hint">点击进行安装</string>
+    <string name="app_update_download_completed">下载完成！</string>
+    <string name="app_update_click_hint">立即安装</string>
     <string name="app_update_download_error">下载出错</string>
     <string name="app_update_continue_downloading">点击继续下载</string>
     <string name="app_update_background_downloading">正在后台下载新版本…</string>
-    <string name="app_update_dialog_new">发现新版本%s可以下载啦！</string>
+    <string name="app_update_dialog_new">发现新版本%s可以升级！</string>
     <string name="app_update_dialog_new_size">新版本大小：%s</string>
     <string name="app_update_update">升级</string>
     <string name="app_update_download">正在下载： </string>
     <string name="install_now">正在安装，请稍后！</string>
     <string name="try_again">再试一次</string>
     <string name="network_disable">网络波动异常，请确认网络连接稳定！</string>
+    <string name="already_exist">本地存储中已存在安装包！</string>
 </resources>
