1、增加该版本不在提示功能，

--- a/OTALibrary/src/main/res/values-zh/strings.xml
+++ b/OTALibrary/src/main/res/values-zh/strings.xml
@@ -20,4 +20,5 @@
     <string name="network_disable">网络波动异常，请确认网络连接稳定！</string>
     <string name="already_exist">本地存储中已存在安装包！</string>
     <string name="no_license">APP未授权使用，请勿盗用</string>
+    <string name="not_show">此版本不再提示！</string>
 </resources>
