--- a/OTALibrary/src/main/res/values/strings.xml
+++ b/OTALibrary/src/main/res/values/strings.xml
@@ -19,6 +19,6 @@
     <string name="try_again">Try again</string>
     <string name="network_disable">The network fluctuation is abnormal. Please confirm that the network connection is stable!</string>
     <string name="already_exist">The installation package already exists in the local storage!</string>
-    <string name="no_license">No license</string>
+    <string name="no_license">Application Unauthorized Use</string>
     <string name="not_show">This version will no longer prompt!</string>
 </resources>
